Distinct command can create an invalid BSON projection spec if key contains embedded null byte

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.11
    • Affects Version/s: None
    • Component/s: Querying
    • None
    • Fully Compatible
    • ALL
    • Query 2019-05-06
    • 58
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      As of SERVER-40089, the distinct key may be used to create a projection spec in the resulting canonical query. However, if the key contains an embedded null byte then we'll create an invalid BSON since BSON keys are null-terminated (while values are not, they are allowed to contain null bytes).

            Assignee:
            Martin Neupauer (Inactive)
            Reporter:
            Nicholas Zolnierz
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: