SERVER-40510 Distinct command can create an invalid BSON projection spec if key contains embedded null byte