jstests/core/distinct4.js
@@ -50,4 +50,6 @@
     // from command interface
     assert.commandWorked(t.runCommand("distinct", {"key": "a"}));
 
+    // embedded nulls are prohibited in the key field
+    assert.commandFailedWithCode(t.runCommand("distinct", {"key": "a\0b"}), 31032);
 })();
